--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docpad-plugin-ghpages": "~2.7.0",
     "docpad-plugin-less": "~2.6.0",
     "docpad-plugin-marked": "~2.5.0",
-    "docpad-plugin-partials": "~2.13.0"
+    "docpad-plugin-partials": "~2.13.0",
+    "superagent": "^3.8.3"
   }
 }
